--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "homepage": "https://github.com/drstonebraker/plaid-chat#readme",
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.2",
     "webpack-livereload-plugin": "^0.11.0"
   }
 }
