--- a/test/fixtures/team_memberships.yml
+++ b/test/fixtures/team_memberships.yml
@@ -1,9 +1,11 @@
 # == Schema Information
 #
-# Table name: teams
+# Table name: team_memberships
 #
 #  id         :integer          not null, primary key
-#  name       :string           not null
+#  team_id    :integer          not null
+#  user_id    :integer          not null
+#  is_default :boolean          not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
@@ -11,7 +13,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  team_id: 1
+  user_id: 1
+  is_default: false
 
 two:
-  name: MyString
+  team_id: 1
+  user_id: 1
+  is_default: false
