--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,7 +8,7 @@
 #  session_token   :string           not null
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
-#  default_team_id :integer          default(2), not null
+#  default_team_id :integer          not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
