Change default team to default team membership

--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -4,10 +4,10 @@
 #
 #  id                :integer          not null, primary key
 #  name              :string           not null
-#  is_direct_message :boolean          default(FALSE), not null
 #  team_id           :integer          not null
 #  created_at        :datetime         not null
 #  updated_at        :datetime         not null
+#  is_direct_message :boolean          default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
