--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.0.0-rc.10",
+    "react-virtualized-select": "^3.1.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
