--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-select": "^1.0.0-rc.10",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.6.0"
   },
@@ -42,5 +41,8 @@
   "engines": {
     "node": "4.1.1",
     "npm": "2.1.x"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   }
 }
