--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "test"
   },
   "scripts": {
-    "postinstall": "webpack"
+    "postinstall": ""
   },
   "repository": {
     "type": "git",
