Commit to create new branch, WIP write invite confim modal style

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "lodash.merge": "^4.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-modal": "^2.3.2",
