--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "lodash.camelcase": "^4.3.0",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.19.1",
     "react": "^15.6.1",
