--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,6 +9,7 @@
 #  created_at                 :datetime         not null
 #  updated_at                 :datetime         not null
 #  default_team_membership_id :integer
+#  is_demo                    :boolean          default(FALSE), not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
