Add avatar_url to User

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,6 +10,7 @@
 #  updated_at                 :datetime         not null
 #  default_team_membership_id :integer
 #  is_demo                    :boolean          default(FALSE), not null
+#  avatar_url                 :string           not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
