Style invite link field

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash.camelcase": "^4.3.0",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.19.1",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^15.6.1",
     "react-modal": "^2.3.2",
     "react-redux": "^5.0.6",
